<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PerfectPowerNap</string>
    <string name="action_settings">Settings</string>
    <string name="title">Perfect Power Nap</string>
    <string name="power_nap">Power Nap</string>
    <string name="timed_nap">Timed Nap</string>
    <string name="title_activity_set_up">SetUp</string>
    <string name="welcome">Welcome to Perfect Power Nap Setup</string>
    <string name="sleep_time">Roughly how long, in minutes, does it take you to fall asleep for a nap?</string>
    <string name="done">Done</string>
    <string name="nap_length">Nap Length</string>
    <string name="ten">10 mins. (If you fall asleep slowly)</string>
    <string name="fifteen">15 mins. (Recommended)</string>
    <string name="twenty">20 mins. (If you fall asleep quickly)</string>
    <string name="alert_sound">Alert Sound</string>
    <string name="alert_name">Siren (Default)</string>
    <string name="dev">Developer: Carter Dewey</string>
    <string name="title_activity_nap">Nap</string>
    <string name="info_text">Your nap has started. Feel free to use one of the relaxing sounds below.</string>
    <string name="ocean">Ocean</string>
    <string name="fire">Fire</string>
    <string name="thunder">Thunder</string>
    <string name="birds">Birds</string>
    <string name="none">None</string>
    <string name="title_activity_wake_up">WakeUp</string>
    <string name="stop">STOP</string>
	<string name="question_text">Did you wake up from this nap feeling tired?</string>
	<string name="submit">Submit</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="tip">Tips</string>
	<string name="tip1">#1 Drink caffeine right before your nap</string>
	<string name="tip2">#2 Find a quiet spot for your nap</string>
	<string name="tip3">#3 Get up as soon as the alarm goes off</string>
	<string name="end_nap">Cancel Nap</string>
	<string name="return_nap">Sound Select</string>
</resources>
