<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ABCDEF"
    tools:context=".SetUp" >

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="italic"/>
    
	<LinearLayout 
	    android:id="@+id/sleepTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/welcomeText">
        
	    <TextView
	        android:id="@+id/sleepTimeText"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	         android:layout_weight=".75"
	        android:text="@string/sleep_time"
	        android:textColor="#FFFFFF"
	        android:textSize="17sp"
	        android:layout_gravity="center_vertical"/>
    
    	<NumberPicker
	        android:id="@+id/sleepTimePicker"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:textColor="#FFFFFF"
	        android:layout_weight=".25"/> 
	    
	</LinearLayout>
	
    <TextView
        android:id="@+id/napLengthText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sleepTime"
        android:text="@string/nap_length"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        android:layout_gravity="center_vertical"/>
		    
	<RadioGroup
        android:id="@+id/napLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/napLengthText">
 
        <RadioButton
            android:id="@+id/lenTen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/ten"/>
 
        <RadioButton
            android:id="@+id/lenFifteen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/fifteen"
            android:checked="true"/>
        
        <RadioButton
            android:id="@+id/lenTwenty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/twenty" />
		 
    </RadioGroup>
		    
    <TextView
        android:id="@+id/alertSoundText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/napLength"
        android:paddingTop="30dp"
        android:text="@string/alert_sound"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        android:layout_gravity="center_vertical"/>
    
    <Button
        android:id="@+id/alertSoundButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/alertSoundText"
        android:text="@string/alert_name"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:layout_gravity="center_vertical"/>
        
    
    <Button
        android:id="@+id/doneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/done" />
    
</RelativeLayout>
