<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ABCDEF"
    tools:context=".WakeUp" >

    <Button
        android:id="@+id/stop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FF0000"
        android:textSize="50sp"
        android:textStyle="bold"
        android:text="@string/stop"/>
    <RelativeLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">
        
		<TextView
	        android:id="@+id/questionText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/question_text"
	        android:textColor="#FFFFFF"
	        android:textSize="24sp"
	        android:textStyle="italic"/>
		
		<RadioGroup
	        android:id="@+id/yesNO"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/questionText">
	 
	        <RadioButton
	            android:id="@+id/yes"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="#FFFFFF"
	            android:text="@string/yes"/>
	 
	        <RadioButton
	            android:id="@+id/no"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="#FFFFFF"
	            android:text="@string/no"/>
			 
	    </RadioGroup>
	    
		<Button 
			android:id="@+id/submit"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="24sp"
	        android:textStyle="italic"
	        android:layout_alignParentBottom ="true"
	        android:text="@string/submit"/>
		
	</RelativeLayout>
	
</RelativeLayout>
